# sfmlsnake

./: .gitignore  CMakeLists.txt  README.md
include/: SFMLSnake.hpp
src/: SFMLSnake.cpp  main.cpp
